ADD favorite RecyclerAdapter with remove value from current user data

--- a/app/src/main/res/layout/dialog_cat.xml
+++ b/app/src/main/res/layout/dialog_cat.xml
@@ -62,7 +62,7 @@
             android:clickable="true"
             android:textColor="@android:color/white"
             android:text="CANCELAR"
-            android:id="@+id/dismissBtn"
+            android:id="@+id/dismissTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="8dp"
@@ -75,7 +75,7 @@
             android:clickable="true"
             android:text="AÑADIR A FAVORITOS"
             android:textColor="@color/colorAccent"
-            android:id="@+id/favoriteBtn"
+            android:id="@+id/favoriteTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="8dp"
