--- a/app/src/main/res/layout/card_item_favorites.xml
+++ b/app/src/main/res/layout/card_item_favorites.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="150dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="180dp"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp"
-    android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="8dp"
     app:cardCornerRadius="8dp">
 
     <RelativeLayout
@@ -15,17 +15,17 @@
         android:layout_height="match_parent"
         android:padding="8dp">
 
-        <ImageView
-            android:id="@+id/photoIv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="4dp" />
+    <ImageView
+        android:id="@+id/favoritePhotoIv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="4dp" />
 
         <TextView
-            android:background="#b3ac27a5"
+            android:background="#b300796b"
             android:gravity="center"
-            android:padding="8dp"
-            android:id="@+id/titleTv"
+            android:padding="4dp"
+            android:id="@+id/favoriteTitleTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -34,5 +34,6 @@
             android:textSize="16sp" />
 
     </RelativeLayout>
+
 
 </android.support.v7.widget.CardView>
